<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_journeys">

    <!-- Root views -->
    <fragment
        android:id="@+id/navigation_journeys"
        android:name="edu.thomas.FragmentJourneys"
        android:label="@string/trajets"
        tools:layout="@layout/fragment_journeys" />

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="edu.thomas.FragmentTickets"
        android:label="@string/billet"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="edu.thomas.FragmentReport"
        android:label="@string/signaler"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="edu.thomas.FragmentProfile"
        android:label="@string/mon_profil"
        tools:layout="@layout/fragment_profile" />
</navigation>