<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:width="350dp"
    android:layout_marginTop="32dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scheduleDisruption"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/perturbation_des_horaires"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/suspiciousBehavior"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/comportement_suspect"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/abandonedLuggage"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/baggage_abandonne"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/technicalProblem"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/probleme_technique"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent" />
</LinearLayout>
