<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/scheduleDisruption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:height="64dp"
            android:text="@string/perturbation_des_horaires"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/blue"
            app:layout_constraintLeft_toLeftOf="parent" />
        <Button
            android:id="@+id/suspiciousBehavior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:height="64dp"
            android:text="@string/comportement_suspect"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/blue"
            app:layout_constraintLeft_toLeftOf="parent" />
        <Button
            android:id="@+id/abandonedLuggage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:height="64dp"
            android:text="@string/baggage_abandonne"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/blue"
            app:layout_constraintLeft_toLeftOf="parent" />
        <Button
            android:id="@+id/technicalProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:height="64dp"
            android:text="@string/probleme_technique"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/blue"
            app:layout_constraintLeft_toLeftOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>