<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:id="@+id/profile_picture"
        android:src="@drawable/profile_picture"
        android:contentDescription="@string/profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:id="@+id/username"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        android:text="Miguel Rodrigo"/>

    <com.google.android.material.button.MaterialButton
        android:textAllCaps="false"
        android:id="@+id/informations"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="24dp"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/your_information"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white" />
    <com.google.android.material.button.MaterialButton
        android:textAllCaps="false"
        android:id="@+id/notifications"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/informations"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/notifications"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white" />
    <com.google.android.material.button.MaterialButton
        android:textAllCaps="false"
        android:id="@+id/advanced_settings"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/notifications"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/advanced_settings"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:textAllCaps="false"
        android:id="@+id/deconnection"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/advanced_settings"
        android:width="350dp"
        android:height="64dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete_my_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>