<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:width="350dp"
    android:layout_marginTop="32dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/profile_picture" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="Miguel Rodrigo"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/informations"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/vos_informations"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/traveler_profile"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/profil_du_voyageur"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/notifications"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/notifications"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/advanced_settings"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/parametres_avances"
        app:strokeColor="@color/blue"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="48dp"
        android:id="@+id/deconnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350dp"
        android:height="64dp"
        android:text="@string/se_deconnecter"
        app:layout_constraintLeft_toLeftOf="parent" />
</LinearLayout>
